根据SonarQube扫描进行代码优化