@@ -1,14 +1,12 @@
 package com.bizmda.bizsip.serveradaptor;
 
-import cn.hutool.extra.spring.SpringUtil;
 import cn.hutool.json.JSONObject;
 import com.alibaba.nacos.api.NacosFactory;
 import com.alibaba.nacos.api.config.ConfigService;
-import com.alibaba.nacos.api.config.listener.AbstractListener;
 import com.alibaba.nacos.api.exception.NacosException;
+import com.bizmda.bizsip.common.BizConstant;
 import com.bizmda.bizsip.common.BizException;
 import com.bizmda.bizsip.common.BizResultEnum;
-import com.bizmda.bizsip.common.NacosConstants;
 import com.bizmda.bizsip.config.AbstractServerAdaptorConfig;
 import com.bizmda.bizsip.config.ServerAdaptorConfigMapping;
 import com.bizmda.bizsip.message.AbstractMessageProcessor;
@@ -21,6 +19,7 @@ import org.springframework.context.annotation.Scope;
 import org.springframework.context.annotation.ScopedProxyMode;
 import org.springframework.stereotype.Service;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Properties;
 
 /**
@@ -36,22 +35,23 @@ public class ServerAdaptor {
     private String serverAddr;
 
     private String serverAdaptorId;
-    private ConfigService configService;
 
     @Autowired
     private ServerAdaptorConfigMapping serverAdaptorConfigMapping;
 
-    private AbstractMessageProcessor messageProcessor;
+    private AbstractMessageProcessor<Object> messageProcessor;
     private AbstractServerProtocolProcessor protocolProcessor;
 
     public void init(String adaptorId) throws BizException {
+        ConfigService configService;
+
         this.serverAdaptorId = adaptorId;
         this.load();
         Properties properties = new Properties();
         properties.put("serverAddr", this.serverAddr);
         try {
-            this.configService = NacosFactory.createConfigService(properties);
-            this.configService.addListener(NacosConstants.REFRESH_SERVER_ADAPTOR_DATA_ID, NacosConstants.NACOS_GROUP, new ServerAdaptorListener(this) {
+            configService = NacosFactory.createConfigService(properties);
+            configService.addListener(BizConstant.REFRESH_SERVER_ADAPTOR_DATA_ID, BizConstant.NACOS_GROUP, new ServerAdaptorListener(this) {
                 @Override
                 public void receiveConfigInfo(String config) {
                     log.info("刷新服务端适配器[{}]配置",this.serverAdaptor.serverAdaptorId);
@@ -66,40 +66,21 @@ public class ServerAdaptor {
         } catch (NacosException e) {
             throw new BizException(BizResultEnum.NACOS_ERROR);
         }
-//        this.configService.addListener(NacosConstants.REFRESH_CLIENT_ADAPTOR_DATA_ID, NacosConstants.NACOS_GROUP, new ServerAdaptorListener(this) {
-//            @Override
-//            public void receiveConfigInfo(String config) {
-//                log.info("刷新客户端适配器配置");
-//            }
-//        });
-//        this.configService.addListener(NacosConstants.REFRESH_SERVICE_DATA_ID, NacosConstants.NACOS_GROUP, new ServerAdaptorListener(this) {
-//            @Override
-//            public void receiveConfigInfo(String config) {
-//                log.info("刷新服务配置");
-//            }
-//        });
-//        this.configService.addListener(NacosConstants.REFRESH_MESSAGE_DATA_ID, NacosConstants.NACOS_GROUP, new ServerAdaptorListener(this) {
-//            @Override
-//            public void receiveConfigInfo(String config) {
-//                log.info("刷新消息配置");
-//            }
-//        });
+
         log.info("配置刷新监控初始化成功!");
     }
 
     public void load() throws BizException {
         AbstractServerAdaptorConfig serverAdaptorConfig = this.serverAdaptorConfigMapping.getServerAdaptorConfig(this.serverAdaptorId);
         String messageType = (String) serverAdaptorConfig.getMessageMap().get("type");
-        Class clazz = AbstractMessageProcessor.MESSAGE_TYPE_MAP.get(messageType);
+        Class<Object> clazz = (Class<Object>)AbstractMessageProcessor.MESSAGE_TYPE_MAP.get(messageType);
         if (clazz == null) {
             throw new BizException(BizResultEnum.NO_MESSAGE_PROCESSOR);
         }
 
         try {
-            this.messageProcessor = (AbstractMessageProcessor) clazz.newInstance();
-        } catch (InstantiationException e) {
-            throw new BizException(BizResultEnum.MESSAGE_CREATE_ERROR, e);
-        } catch (IllegalAccessException e) {
+            this.messageProcessor = (AbstractMessageProcessor<Object>)clazz.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new BizException(BizResultEnum.MESSAGE_CREATE_ERROR, e);
         }
 
@@ -107,16 +88,14 @@ public class ServerAdaptor {
 
         String protocolType = (String) serverAdaptorConfig.getProtocolMap().get("type");
 
-        clazz = AbstractServerProtocolProcessor.PROTOCOL_TYPE_MAP.get(protocolType);
+        clazz = (Class)AbstractServerProtocolProcessor.PROTOCOL_TYPE_MAP.get(protocolType);
         if (clazz == null) {
             throw new BizException(BizResultEnum.SERVER_NO_PROTOCOL_PROCESSOR);
         }
 
         try {
-            this.protocolProcessor = (AbstractServerProtocolProcessor) clazz.newInstance();
-        } catch (InstantiationException e) {
-            throw new BizException(BizResultEnum.SERVER_PROTOCOL_CREATE_ERROR, e);
-        } catch (IllegalAccessException e) {
+            this.protocolProcessor = (AbstractServerProtocolProcessor) clazz.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             throw new BizException(BizResultEnum.SERVER_PROTOCOL_CREATE_ERROR, e);
         }
 
