@@ -5,6 +5,8 @@ import com.bizmda.bizsip.common.BizResultEnum;
 import com.bizmda.bizsip.config.AbstractServerAdaptorConfig;
 import com.bizmda.bizsip.serveradaptor.protocol.java.JavaProtocolInterface;
 
+import java.lang.reflect.InvocationTargetException;
+
 /**
  * @author 史正烨
  */
@@ -16,12 +18,9 @@ public class JavaServerProtocolProcessor extends AbstractServerProtocolProcessor
         super.init(serverAdaptorConfig);
         String clazzName = (String)serverAdaptorConfig.getProtocolMap().get("class-name");
         try {
-            javaProtocol = (JavaProtocolInterface)Class.forName(clazzName).newInstance();
-        } catch (InstantiationException e) {
-            throw new BizException(BizResultEnum.SERVER_PROTOCOL_JAVA_CREATE_ERROR,e);
-        } catch (IllegalAccessException e) {
-            throw new BizException(BizResultEnum.SERVER_PROTOCOL_JAVA_CREATE_ERROR,e);
-        } catch (ClassNotFoundException e) {
+            javaProtocol = (JavaProtocolInterface)Class.forName(clazzName).getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException
+                | NoSuchMethodException | InvocationTargetException e) {
             throw new BizException(BizResultEnum.SERVER_PROTOCOL_JAVA_CREATE_ERROR,e);
         }
     }
